2006-02-08 Perry
 Current selftests status: Failure count: 0 (of 756)

2006-02-08 Perry
 PATCH: [ 1426552 ] Add selftests between platform versions
  Src: Changes.txt ConfigLog.cpp DiffWrapper.cpp DiffWrapper.h
   DirDoc.cpp MainFrm.cpp MergeArgs.cpp MergeDoc.cpp
   MergeDocLineDiffs.cpp OptionsDef.h OptionsInit.cpp PatchTool.cpp
   PropCompare.cpp PropCompare.h 
  Src\editlib: ccrystaltextbuffer.cpp ccrystaltextbuffer.h

2006-02-08 Perry
 Current selftests status: Failure count: 0 (of 588)

2006-02-08 Perry
 PATCH: [ 1424867 ] Fix common prefix code for \r\n
  Src\diffutils\src: IO.C
 PATCH: [ 1426793 ] Fix diffutils that counts lines in suffix
  Src\diffutils\src: IO.C

2006-02-07 Perry
 Current selftests status: Failure count: 0 (of 588)

2006-02-07 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Fix dir compare report dialog layout
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-02-06 Perry
 Synchronizing Slovak translation to English where feasible.
  Src/Languages/Slovak: MergeSlovak.rc
 Synchronizing Swedish translation to English where feasible.
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1392413 ] Track lossy encodings & warn user
  Src: FileFilterMgr.cpp Merge.rc MergeDoc.cpp files.h resource.h
  Src/Common: UniFile.cpp UniFile.h unicoder.cpp
 PATCH: [ 1392413 ] Track lossy encodings & warn user
  Src/Languages/*: Merge*.rc

2006-02-05 Perry
 PATCH: [ 1414201 ] Cleanup Merge Line Flags
  Src: LocationView.cpp Merge.dsp MergeDiffDetailView.cpp MergeDoc.cpp
   MergeEditView.cpp MergeEditView.h 
  NEW Src: MergeLineFlags.h

2006-02-05 Kimmo
 PATCH: [ 1424264 ] Use 'Item' instead of file in View-menu
  Src: Merge.rc
  Src/Language: */Merge*.rc

2006-02-05 Perry
 Fix Italian Edit/Options/Editor line selection controls.
  Src/Languages/Italian/MergeItalian.rc
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  New updates for selecting current diffs and wrap lines.